DS-725 PersonalisationService enhancements